移除 Category & Group
