# app/Http/Controllers/GroupMemberController.php
@@ -1,55 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use App\Models\User;
-use App\Models\Group;
-use App\Models\GroupMember;
-
-use Illuminate\Http\Request;
-
-use App\Http\Requests;
-
-class GroupMemberController extends Controller
-{
-
-    public function __construct()
-    {
-        // 执行 auth 认证
-        $this->middleware('auth', [
-            'except' => [
-                'index',
-                'show'
-            ]
-        ]);
-    }
-
-    public function index(Request $request, $group_id)
-    {
-        $user_ids = GroupMember::where('group_id', $group_id)->lists('user_id');
-
-        $query = User::whereIn('id', $user_ids);
-        return $this->pagination($query->paginate());
-    }
-
-    public function store(Request $request)
-    {
-        return $this->failure();
-    }
-
-    public function show(Request $request)
-    {
-        return $this->failure();
-    }
-
-    public function update(Request $request)
-    {
-        return $this->failure();
-    }
-
-    public function destroy(Request $request)
-    {
-        return $this->failure();
-    }
-
-}
