# public/docs/api/swagger.json
@@ -3,7 +3,7 @@
     "info": {
         "version": "0.0.1",
         "title": "Daza.io RESTful API",
-        "description": "### 状态属性\n\n### 错误属性\n\n### 分页属性\n\n### 数据属性\n\n请求响应示例\n```json\n{\n    \"status\": \"success\",\n    \"error\": {\n        \"code\": 404,\n        \"message\": \"...\",\n        \"errors\": [\n            {\n                \"field\": \"user\",\n                \"message\": \"用户 不存在。\"\n            }\n        ]\n    },\n    \"pagination\": {\n        \"total\": 10,\n        \"per_page\": 10,\n        \"current_page\": 1,\n        \"last_page\": 1,\n        \"next_page_url\": null,\n        \"prev_page_url\": null,\n        \"from\": 1,\n        \"to\": 10\n    },\n    \"data\": {\n        ...\n    }\n}\n```\n"
+        "description": "请求响应示例\n```json\n{\n    \"status\": \"success\",\n    \"error\": {\n        \"code\": 404,\n        \"message\": \"...\",\n        \"errors\": [\n            {\n                \"field\": \"user\",\n                \"message\": \"用户 不存在。\"\n            }\n        ]\n    },\n    \"pagination\": {\n        \"total\": 10,\n        \"per_page\": 10,\n        \"current_page\": 1,\n        \"last_page\": 1,\n        \"next_page_url\": null,\n        \"prev_page_url\": null,\n        \"from\": 1,\n        \"to\": 10\n    },\n    \"data\": {\n        ...\n    }\n}\n```\n"
     },
     "basePath": "/v1",
     "produces": [
@@ -20,13 +20,7 @@
             "name": "users"
         },
         {
-            "name": "categories"
-        },
-        {
             "name": "tags"
-        },
-        {
-            "name": "groups"
         },
         {
             "name": "tweets"
@@ -61,13 +55,6 @@
             "type": "integer",
             "required": true
         },
-        "category-id": {
-            "name": "category_id",
-            "in": "path",
-            "description": "分类Id",
-            "type": "integer",
-            "required": true
-        },
         "tag-id": {
             "name": "tag_id",
             "in": "path",
@@ -80,13 +67,6 @@
             "in": "path",
             "description": "标签名称",
             "type": "string",
-            "required": true
-        },
-        "group-id": {
-            "name": "group_id",
-            "in": "path",
-            "description": "小组Id",
-            "type": "integer",
             "required": true
         },
         "tweet-id": {
@@ -508,41 +488,6 @@
                 }
             }
         },
-        "/users/{user_id}/groups": {
-            "parameters": [
-                {
-                    "$ref": "#/parameters/user-id"
-                }
-            ],
-            "get": {
-                "tags": [
-                    "users"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/parameters/page"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                },
-                                "data": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Group"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/users/{user_id}/tweets": {
             "parameters": [
                 {
@@ -648,63 +593,6 @@
                 }
             }
         },
-        "/categories": {
-            "get": {
-                "tags": [
-                    "categories"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/parameters/page"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                },
-                                "data": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Category"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/categories/{category_id}": {
-            "parameters": [
-                {
-                    "$ref": "#/parameters/category-id"
-                }
-            ],
-            "get": {
-                "tags": [
-                    "categories"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                },
-                                "data": {
-                                    "$ref": "#/definitions/Category"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/tags": {
             "get": {
                 "tags": [
@@ -800,154 +688,6 @@
             "get": {
                 "tags": [
                     "tags"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/parameters/page"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                },
-                                "data": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Post"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/groups": {
-            "get": {
-                "tags": [
-                    "groups"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/parameters/page"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                },
-                                "data": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Group"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/groups/{group_id}": {
-            "parameters": [
-                {
-                    "$ref": "#/parameters/group-id"
-                }
-            ],
-            "get": {
-                "tags": [
-                    "groups"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                },
-                                "data": {
-                                    "$ref": "#/definitions/Group"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/groups/{group_id}/join": {
-            "parameters": [
-                {
-                    "$ref": "#/parameters/group-id"
-                }
-            ],
-            "post": {
-                "tags": [
-                    "groups"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/groups/{group_id}/members": {
-            "parameters": [
-                {
-                    "$ref": "#/parameters/group-id"
-                }
-            ],
-            "get": {
-                "tags": [
-                    "groups"
-                ],
-                "parameters": [
-                    {
-                        "$ref": "#/parameters/page"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "properties": {
-                                "status": {
-                                    "type": "string"
-                                },
-                                "data": {
-                                    "$ref": "#/definitions/User"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/groups/{group_id}/posts": {
-            "parameters": [
-                {
-                    "$ref": "#/parameters/group-id"
-                }
-            ],
-            "get": {
-                "tags": [
-                    "groups"
                 ],
                 "parameters": [
                     {
@@ -1588,13 +1328,6 @@
                     "articles"
                 ],
                 "parameters": [
-                    {
-                        "name": "category_id",
-                        "in": "formData",
-                        "description": "分类Id",
-                        "type": "integer",
-                        "required": true
-                    },
                     {
                         "name": "author",
                         "in": "formData",
@@ -2348,28 +2081,6 @@
                 }
             }
         },
-        "Category": {
-            "type": "object",
-            "description": "分类",
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "description": "Id"
-                },
-                "name": {
-                    "type": "string",
-                    "description": "名称"
-                },
-                "image_url": {
-                    "type": "string",
-                    "description": "图片网址"
-                },
-                "description": {
-                    "type": "string",
-                    "description": "描述"
-                }
-            }
-        },
         "Tag": {
             "type": "object",
             "description": "标签",
@@ -2389,56 +2100,6 @@
                 "description": {
                     "type": "string",
                     "description": "描述"
-                }
-            }
-        },
-        "Group": {
-            "type": "object",
-            "description": "小组",
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "description": "Id"
-                },
-                "name": {
-                    "type": "string",
-                    "description": "名称"
-                },
-                "image_url": {
-                    "type": "string",
-                    "description": "图片网址"
-                },
-                "description": {
-                    "type": "string",
-                    "description": "描述"
-                }
-            }
-        },
-        "GroupMember": {
-            "type": "object",
-            "description": "小组成员",
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "description": "Id"
-                },
-                "group_id": {
-                    "type": "integer",
-                    "description": "小组Id"
-                },
-                "user_id": {
-                    "type": "integer",
-                    "description": "用户Id"
-                },
-                "invited_at": {
-                    "type": "string",
-                    "format": "date-time",
-                    "description": "受邀时间"
-                },
-                "joined_at": {
-                    "type": "string",
-                    "format": "date-time",
-                    "description": "加入时间"
                 }
             }
         },
