# resources/lang/zh-CN/validation.php
@@ -144,12 +144,8 @@ return [
         'verify_code'           => '验证码',
         'old_password'          => '原密码',
         'new_password'          => '新密码',
-        'category'              => '分类',
-        'category_id'           => '分类Id',
         'tag'                   => '标签',
         'tag_name'              => '标签名',
-        'group'                 => '小组',
-        'group_id'              => '小组Id',
         'tweet'                 => '推文',
         'tweet_id'              => '推文Id',
         'post'                  => '帖子',
